<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.icuxika</groupId>
    <artifactId>JavaFX-Package-Sample</artifactId>
    <version>1.0.0</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>22</maven.compiler.release>
        <javafx.version>22</javafx.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.palexdev</groupId>
            <artifactId>materialfx</artifactId>
            <version>11.16.1</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.12</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.3</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>win</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <application.package.type>msi</application.package.type>
                <application.icon>${project.basedir}/src/main/resources/application.ico</application.icon>
                <application.package.stdout.encoding>-J-Dsun.stdout.encoding=UTF-8</application.package.stdout.encoding>
                <application.package.stderr.encoding>-J-Dsun.stderr.encoding=UTF-8</application.package.stderr.encoding>
                <application.package.options/>
                <application.package.options1>--win-dir-chooser</application.package.options1>
                <application.package.options2>--win-menu</application.package.options2>
                <application.package.options3>--win-menu-group</application.package.options3>
                <application.package.options4>JavaFXSample</application.package.options4>
                <application.package.options5>--win-per-user-install</application.package.options5>
                <application.package.options6>--win-shortcut</application.package.options6>
                <application.package.options7>--win-shortcut-prompt</application.package.options7>
                <application.package.options8>--win-upgrade-uuid</application.package.options8>
                <application.package.options9>fd5b16cf-e0a9-4ef4-abc8-73d396fecf6d</application.package.options9>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.gluonhq</groupId>
                        <artifactId>gluonfx-maven-plugin</artifactId>
                        <version>1.0.22</version>
                        <configuration>
                            <mainClass>com.icuxika.MainApp</mainClass>
                            <bundlesList>
                                <list>LanguageResource</list>
                                <list>LanguageResource_en</list>
                                <list>LanguageResource_zh_CN</list>
                            </bundlesList>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>mac</id>
            <properties>
                <application.package.type>dmg</application.package.type>
                <application.icon>${project.basedir}/src/main/resources/application.icns</application.icon>
                <application.package.stdout.encoding>-J-Dsun.stdout.encoding=UTF-8</application.package.stdout.encoding>
                <application.package.stderr.encoding>-J-Dsun.stderr.encoding=UTF-8</application.package.stderr.encoding>
                <application.package.options/>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.gluonhq</groupId>
                        <artifactId>gluonfx-maven-plugin</artifactId>
                        <version>1.0.22</version>
                        <configuration>
                            <mainClass>com.icuxika.MainApp</mainClass>
                            <bundlesList>
                                <list>LanguageResource</list>
                                <list>LanguageResource_en</list>
                                <list>LanguageResource_zh_CN</list>
                            </bundlesList>
                            <nativeImageArgs>
                                <nativeImageArg>
                                    -Dsvm.platform=org.graalvm.nativeimage.Platform$MACOS_AMD64
                                </nativeImageArg>
                            </nativeImageArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.2</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/alternateLocation</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>image</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>jpackage</executable>
                            <workingDirectory>${project.basedir}</workingDirectory>
                            <arguments>
                                <argument>${application.package.stdout.encoding}</argument>
                                <argument>${application.package.stderr.encoding}</argument>
                                <argument>-n</argument>
                                <argument>JavaFXSample</argument>
                                <argument>-t</argument>
                                <argument>app-image</argument>
                                <argument>-p</argument>
                                <argument>
                                    ${project.build.directory}/alternateLocation${path.separator}${project.build.directory}/${project.artifactId}-${project.version}.jar
                                </argument>
                                <argument>-d</argument>
                                <argument>${project.build.directory}/mvnPackage</argument>
                                <argument>-m</argument>
                                <argument>sample/com.icuxika.MainApp</argument>
                                <argument>--icon</argument>
                                <argument>${application.icon}</argument>
                                <argument>--app-version</argument>
                                <argument>1.0.0</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>installer</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>jpackage</executable>
                            <workingDirectory>${project.basedir}</workingDirectory>
                            <arguments>
                                <argument>${application.package.stdout.encoding}</argument>
                                <argument>${application.package.stderr.encoding}</argument>
                                <argument>-n</argument>
                                <argument>JavaFXSample</argument>
                                <argument>-t</argument>
                                <argument>${application.package.type}</argument>
                                <argument>-p</argument>
                                <argument>
                                    ${project.build.directory}/alternateLocation${path.separator}${project.build.directory}/${project.artifactId}-${project.version}.jar
                                </argument>
                                <argument>-d</argument>
                                <argument>${project.build.directory}/mvnInstaller</argument>
                                <argument>-m</argument>
                                <argument>sample/com.icuxika.MainApp</argument>
                                <argument>--icon</argument>
                                <argument>${application.icon}</argument>
                                <argument>--app-version</argument>
                                <argument>1.0.0</argument>
                                <argument><![CDATA[${application.package.options}]]></argument>
                                <argument>${application.package.options1}</argument>
                                <argument>${application.package.options2}</argument>
                                <argument>${application.package.options3}</argument>
                                <argument>${application.package.options4}</argument>
                                <argument>${application.package.options5}</argument>
                                <argument>${application.package.options6}</argument>
                                <argument>${application.package.options7}</argument>
                                <argument>${application.package.options8}</argument>
                                <argument>${application.package.options9}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <stripDebug>true</stripDebug>
                    <compress>2</compress>
                    <noHeaderFiles>true</noHeaderFiles>
                    <noManPages>true</noManPages>
                    <launcher>JavaFXSample</launcher>
                    <jlinkImageName>build-link</jlinkImageName>
                    <jlinkZipName>sample-zip</jlinkZipName>
                    <mainClass>sample/com.icuxika.MainApp</mainClass>
                    <options>
                        <option>--enable-native-access=sample</option>
                        <option>-Dsun.stdout.encoding=UTF-8</option>
                    </options>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>